# zz

./: .gitignore  a.c  configure.ac  zz-impl.h  zz.c  zz.h
doc/: zz.texi
tests/: t-binop.c  t-misc.c  t-pow.c  t-unop.c  utils.c
